Adds the html of the navigation bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Personal Website</title>
 </head>
 <body>
+    <div class="page-container">
+        <!-- NAVIGATION-SECTION -->
+        <section class="navigation-container">
+            <div class="navigation-logo">
 
+            </div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Skills</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+            <div class="nav-toggle-button">
+                <button>
+                    
+                </button>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
