Adds a background video

--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'> <!--boxicons link-->
     <title>Personal Website</title>
 </head>
 <body>
-
+    <div class="page-container">
+        <!-- NAVIGATION-SECTION -->
+        <section class="navigation-container">
+            <div class="navigation-logo">
+                <h3>Kimani</h3>
+            </div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Skills</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+            <div class="nav-toggle-button">
+                <button>
+                    nav
+                </button>
+            </div>
+        </section>
+        <!-- HOME-SECTION -->
+        <section class="home-container">
+            <div class="home">
+                <video autoplay loop muted plays-inline class="background-video">
+                    <source src="./Assets/videos/Untitled.mp4" type="video/mp4">
+                </video>
+                <h1>Hi, I'm <span>Antony Kimani</span> a Software Developer <span>.</span></h1>
+                <h2>Here I showcase Designs,Projects and Web Applications</h2>
+                <button class="contact-button">Contact Me</button>
+                <div class="social-links-container">
+                    <a href=""><i class = "bx bxl-github"></i></a>
+                    <a href=""><i class = "bx bxl-twitter"></i></a>
+                    <a href=""><i class = "bx bxl-linkedin"></i></a>
+                </div>
+            </div>
+        </section>
+        <!--ABOUT-SECTION-->
+        <section class="about-container">
+            <h1>About</h1>
+            <div class="about-subcontainer">
+                <div class="about-image">
+                    <img src="./Assets/images/kimani.png" alt="">
+                    <img src="./Assets/images/abstract-shape.jpg" alt="">
+                </div>
+                <div class="about-text">
+                    <h3>I'm Antony Kimani, a <span>software developer </span> student at <span>Moringa School</span> passionate about building the next generation of technology. </h3>
+                    <h3>I build Web Application in HTML,CSS,JAVASCRIPT and RUBY. I have skills in REACT and using RAILS.</h3>
+                    <h3>I would love to work with you on your next Project . Share some thoughts?</h3>
+                </div>
+            </div>
+        </section>
+        <!--SKILLS SECTION-->
+        <section class="skills-container">
+            
+        </section>
+    </div>
 </body>
 </html>
