--- a/index.html
+++ b/index.html
@@ -62,7 +62,42 @@
         </section>
         <!--SKILLS SECTION-->
         <section class="skills-container">
-            
+            <h2>Skills</h2>
+            <div class="skills-subcontainer">
+                <div class="skills-image">
+                    <img src="./Assets/images/Button style-bro.png" alt="">
+                </div>
+                <div class="skills-bars">
+                    <div class="skill">
+                        <div class="skill-logo">
+                            <i class='bx bxl-html5' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
+                            <h3>100%</h3>
+                        </div>
+                        <progress value="100" max="100"></progress>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-logo">
+                            <i class='bx bxl-css3' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
+                            <h3>100%</h3>
+                        </div>
+                        <progress value="93" max="100"></progress>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-logo">
+                            <i class='bx bxl-javascript' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
+                            <h3>100%</h3>
+                        </div>
+                        <progress value="70" max="100"></progress>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-logo">
+                            <i class='bx bxl-react' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
+                            <h3>100%</h3>
+                        </div>
+                        <progress value="80" max="100"></progress>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
