Adds a Project section to the index.html file

--- a/index.html
+++ b/index.html
@@ -99,6 +99,32 @@
                 </div>
             </div>
         </section>
+        <!--PROJECTS-->
+        <section class="project-container">
+            <h2>Projects</h2>
+            <div class="projects">
+                <div class="project-card">
+                    <img src="./Assets/images/Screenshot from 2022-06-05 10-20-17.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
+                    <a href="#"></a>
+                </div>
+                <div class="project-card">
+                    <img src="./Assets/images/Screenshot from 2022-06-05 10-20-27.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
+                    <a href="#"></a>
+                </div>
+                <div class="project-card">
+                    <img src="./Assets/images/Screenshot from 2022-06-05 10-20-49.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
+                    <a href="#"></a>
+                </div>
+                <div class="project-card">
+                    <img src="./Assets/images/Screenshot from 2022-06-05 10-21-15.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
+                    <a href="#"></a>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
