Adds contact and footer section to index.html

--- a/index.html
+++ b/index.html
@@ -125,6 +125,27 @@
                 </div>
             </div>
         </section>
+        <!--CONTACT SECTION-->
+        <section class="contact-container">
+            <h2>contact</h2>
+            <div class="contacts">
+                <form action="">
+                    <input type="text" placeholder="name">
+                    <input type="text" placeholder="email">
+                    <textarea cols="0" rows="10" placeholder="enter your message.."></textarea>
+                </form>
+            </div>
+        </section>
+        <!--FOOTER-->
+        <section class="footer-container">
+            <h2>Kimani</h2>
+            <div class="social-links-container">
+                <a href=""><i class = "bx bxl-github"></i></a>
+                <a href=""><i class = "bx bxl-twitter"></i></a>
+                <a href=""><i class = "bx bxl-linkedin"></i></a>
+            </div>
+            <h3>all rights reserved &copy; 2022</h3>
+        </section>
     </div>
 </body>
 </html>
