Styles the Navigation section

--- a/index.html
+++ b/index.html
@@ -5,30 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'> <!--boxicons link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><!--google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!--google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Actor&family=Poppins&display=swap" rel="stylesheet"><!--google fonts-->
+    <link rel="stylesheet" href="./Assets/css/index.css"><!--css file-->
     <title>Personal Website</title>
 </head>
 <body>
-    <div class="page-container">
+    <div class="page-container">  
         <!-- NAVIGATION-SECTION -->
-        <section class="navigation-container">
-            <div class="navigation-logo">
-                <h3>Kimani</h3>
-            </div>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Skills</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-            </nav>
-            <div class="nav-toggle-button">
-                <button>
-                    nav
-                </button>
-            </div>
-        </section>
+        <div class="navigation-position">
+            <section class="navigation-container">
+                <div class="navigation-logo">
+                    <h3>Kimani</h3>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Skills</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="nav-toggle-button">
+                    <button>
+                        nav
+                    </button>
+                </div>
+            </section>
+        </div>
         <!-- HOME-SECTION -->
         <section class="home-container">
             <div class="home">
@@ -44,7 +50,7 @@
                     <a href=""><i class = "bx bxl-linkedin"></i></a>
                 </div>
             </div>
-        </section>
+        </section>  
         <!--ABOUT-SECTION-->
         <section class="about-container">
             <h1>About</h1>
