Adds styling to the home section

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         </div>
         <!-- HOME-SECTION -->
         <section class="home-container">
-            <div class="home">
                 <video autoplay loop muted plays-inline class="background-video">
                     <source src="./Assets/videos/Untitled.mp4" type="video/mp4">
                 </video>
-                <h1>Hi, I'm <span>Antony Kimani</span> a Software Developer <span>.</span></h1>
-                <h2>Here I showcase Designs,Projects and Web Applications</h2>
+            <div class="home">   
+                <h1>Hi, I'm <span>Antony Kimani</span> a Software Developer<span>.</span></h1>
+                <h2>Here I showcase Designs, Projects and Web Applications</h2>
                 <button class="contact-button">Contact Me</button>
                 <div class="social-links-container">
-                    <a href=""><i class = "bx bxl-github"></i></a>
+                    <a href=""><i class = "bx bxl-github bx-lg"></i></a>
                     <a href=""><i class = "bx bxl-twitter"></i></a>
                     <a href=""><i class = "bx bxl-linkedin"></i></a>
                 </div>
