--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
             <h1>About</h1>
             <div class="about-subcontainer">
                 <div class="about-image">
-                    <img src="./Assets/images/kimani.png" alt="">
-                    <img src="./Assets/images/abstract-shape.jpg" alt="">
+                    <img src="./Assets/images/kimani.png" alt="" id="about-img">
                 </div>
                 <div class="about-text">
                     <h3>I'm Antony Kimani, a <span>software developer </span> student at <span>Moringa School</span> passionate about building the next generation of technology. </h3>
-                    <h3>I build Web Application in HTML,CSS,JAVASCRIPT and RUBY. I have skills in REACT and using RAILS.</h3>
-                    <h3>I would love to work with you on your next Project . Share some thoughts?</h3>
+                    <h4>I build Web Application in HTML,CSS,JAVASCRIPT and RUBY. I have skills in REACT and using RAILS.</h4>
+                    <h5>I would love to work with you on your next Project . Share some thoughts?</h5>
                 </div>
             </div>
         </section>
