style the skills section

--- a/index.html
+++ b/index.html
@@ -69,13 +69,10 @@
         <section class="skills-container">
             <h2>Skills</h2>
             <div class="skills-subcontainer">
-                <div class="skills-image">
-                    <img src="./Assets/images/Button style-bro.png" alt="">
-                </div>
-                <div class="skills-bars">
+                <div class="skill-bars">
                     <div class="skill">
                         <div class="skill-logo">
-                            <i class='bx bxl-html5' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
+                            <i class='bx bxl-html5 bx-lg' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
                             <h3>100%</h3>
                         </div>
                         <progress value="100" max="100"></progress>
@@ -101,6 +98,9 @@
                         </div>
                         <progress value="80" max="100"></progress>
                     </div>
+                </div>
+                <div class="skills-image">
+                    <img src="./Assets/images/Button style-bro.png" alt="">
                 </div>
             </div>
         </section>
