styles the project section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <source src="./Assets/videos/Untitled.mp4" type="video/mp4">
                 </video>
             <div class="home">   
-                <h1>Hi, I'm <span>Antony Kimani</span> a Software Developer<span>.</span></h1>
+                <h1>Hi, I'm <span>Antony Kimani</span> Software Developer<span>.</span></h1>
                 <h2>Here I showcase Designs, Projects and Web Applications</h2>
                 <button class="contact-button">Contact Me</button>
                 <div class="social-links-container">
@@ -111,22 +111,22 @@
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-17.png" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#"></a>
+                    <a href="#">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-27.png" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#"></a>
+                    <a href="#">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-49.png" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#"></a>
+                    <a href="#">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-21-15.png" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#"></a>
+                    <a href="#">View Project</a>
                 </div>
             </div>
         </section>
