--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a href=""><i class = "bx bxl-twitter"></i></a>
                 <a href=""><i class = "bx bxl-linkedin"></i></a>
             </div>
-            <h3>all rights reserved &copy; 2022</h3>
+            <h3>&copy; all rights reserved 2022</h3>
         </section>
     </div>
 </body>
