Adds responsiveness from 1000px to 900px

--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
         </section>  
         <!--ABOUT-SECTION-->
         <section class="about-container">
-            <h1>About</h1>
+            <h2>About</h2>
             <div class="about-subcontainer">
                 <div class="about-image">
                     <img src="./Assets/images/kimani.png" alt="" id="about-img">
                 </div>
                 <div class="about-text">
                     <h3>I'm Antony Kimani, a <span>software developer </span> student at <span>Moringa School</span> passionate about building the next generation of technology. </h3>
+                    <hr>
                     <h4>I build Web Application in HTML,CSS,JAVASCRIPT and RUBY. I have skills in REACT and using RAILS.</h4>
+                    <hr>
                     <h5>I would love to work with you on your next Project . Share some thoughts?</h5>
                 </div>
             </div>
         </section>
         <!--SKILLS SECTION-->
         <section class="skills-container">
-            <h2>Skills</h2>
+            <h2 class="section-title">Skills</h2>
             <div class="skills-subcontainer">
                 <div class="skill-bars">
                     <div class="skill">
@@ -80,21 +82,21 @@
                     <div class="skill">
                         <div class="skill-logo">
                             <i class='bx bxl-css3' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
-                            <h3>100%</h3>
+                            <h3>93%</h3>
                         </div>
                         <progress value="93" max="100"></progress>
                     </div>
                     <div class="skill">
                         <div class="skill-logo">
                             <i class='bx bxl-javascript' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
-                            <h3>100%</h3>
+                            <h3>70%</h3>
                         </div>
                         <progress value="70" max="100"></progress>
                     </div>
                     <div class="skill">
                         <div class="skill-logo">
                             <i class='bx bxl-react' style='color: hsl(var(--hue-color), 89%, 60%)' ></i>
-                            <h3>100%</h3>
+                            <h3>80%</h3>
                         </div>
                         <progress value="80" max="100"></progress>
                     </div>
@@ -106,7 +108,7 @@
         </section>
         <!--PROJECTS-->
         <section class="project-container">
-            <h2>Projects</h2>
+            <h2 class="section-title">Projects</h2>
             <div class="projects">
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-17.png" alt="">
