--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'> <!--boxicons link-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><!--google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!--google fonts-->
@@ -24,7 +24,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Skills</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Projects</a><li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
