add functionality to nav links

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <nav class="nav-menu-desktop">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Skills</a></li>
-                        <li><a href="#">Projects</a><li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#" class="aboutscroll">About</a></li>
+                        <li><a href="#" class="skillsscroll">Skills</a></li>
+                        <li><a href="#" class="projectscroll">Projects</a><li>
+                        <li><a href="#" class="contactscroll">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="nav-toggle-button">
@@ -126,23 +126,23 @@
             <div class="projects">
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-17.png" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#">View Project</a>
+                    <p>This Repository contains the Week One's Independent Project | Moringa School Website.</p>
+                    <a href="https://github.com/anthonykimani/Week-1-Independent-Project">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-27.png" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#">View Project</a>
+                    <p>This is a Two-Page Website of the Quick Movers Company</p>
+                    <a href="https://github.com/anthonykimani/Week-2-Independent-Project-Quick-Movers-Website">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-20-49.png" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#">View Project</a>
+                    <p>This is a Quiz App to the After School Computer Club.</p>
+                    <a href="https://github.com/anthonykimani/Quiz-Board-Independent-Project">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="./Assets/images/Screenshot from 2022-06-05 10-21-15.png" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, consequatur?Lorem ipsum dolor sit amet.</p>
-                    <a href="#">View Project</a>
+                    <p>This Repository Contains the Maji Nyumbani group project</p>
+                    <a href="https://github.com/anthonykimani/Maji-Nyumbani">View Project</a>
                 </div>
             </div>
         </section>
